fixed issue with dropdown menu going off the side of the screen on mobile

--- a/frontend/src/Styles/Nav.css
+++ b/frontend/src/Styles/Nav.css
@@ -5,6 +5,11 @@
     align-items: center;
 }
 
+.dropdown-menu-right {
+    right: 0;
+    left: auto;
+}
+
 .navbar h1{
     color: white;
 }
@@ -20,8 +25,6 @@
     margin-bottom: 0px;
     padding-left: 61px;
 }
-
-
 
 .iconBtn{
     border: none;
